Add stripe checkout

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
               <button
                 class="block w-full p-4 mt-4 text-sm font-medium bg-yellow-500 rounded-sm"
                 type="button"
+                onclick="location.href='https://buy.stripe.com/test_aEU14y4ua0KwaBy9AA';"
               >
                 Buy
               </button>
